test/sematic/resources/positive/basic_namespace.tig
let
    var a := 12
    function a():int = 12
in
    a()
end